Added content to webpages

--- a/pages/effect-economy.html
+++ b/pages/effect-economy.html
@@ -13,7 +13,107 @@
 
 <h1 align="center">Effect on economy</h1>
 
+<br>
+<br>
 
+<h3>
+These 3 charts that show the global economic impact of coronavirus </h3>
+<ul>
+<li>
+The coronavirus has had a significant impact on the global economy.
+</li>
+<li>
+ These charts give a snapshot of what happened in the first quarter of 2020.
+</li>
+</ul>
+<br>
+<br>
+<h3>
+1. First quarter of 2020
+</h3>
+<p>
+Few will regret the end of the first 2020 quarter. Fears of a U.S.-Iran war gave way to the coronavirus pandemic which JPMorgan reckons will have pushed the world economy into a 12% contraction over January to March. The quarter saw the most brutal global equity collapse since the Great Depression, exacerbated by a 60% oil price slump.
+</p>
+<p>
+April may not bring much relief, with coronavirus still spreading rapidly and keeping large parts of the global economy shuttered. Banks have rushed to slash Q2 forecasts too, so expect more turbulence on financial markets.
+</p>
+<p>
+The cavalry has arrived though. G20 governments have promised a $5 trillion revival effort, major central banks have slashed rates and restarted asset purchases. Markets have bounced big and may actually end Q1 on a high. What we need now is to see infection rates peaking and that will show whether April falls, or if it’s indeed time for spring.
+</p>
+<br>
+
+<table align="center" height="500" width="650" border="2">
+<tr>
+<td>
+<img src="../resources/images/economy/1.png" height="500" width="650">
+</td>
+</tr>
+<tr bgcolor="#000000" align="center">
+<td style=" padding: 15px;">
+The effects of COVID-19 on world stocks
+</td>
+</tr>
+</table>
+<br>
+<br>
+	<br>
+<br>
+<h3>
+2. Pandemic payrolls
+</h3>
+<p>
+Through years of stubbornly low economic growth and inflation, the brightest spot was the U.S. labour market, with unemployment reaching half-century lows. Coronavirus may have ended that boom.
+
+With infections surging, cities in lockdown, businesses downing shutters and most travel on ice, staff layoffs are likely to mushroom. That showed up in the number of Americans filing unemployment benefit claims which hit a record of more than 3 million. Economists polled by Reuters had forecast claims would rise to 1 million, though some estimates were as high as 4 million.</p>
+<br>
+<br>
+<br>
+
+<table align="center" height="500" width="650" border="2">
+<tr>
+<td>
+<img src="../resources/images/economy/2.jpg" height="500" width="650">
+</td>
+</tr>
+<tr bgcolor="#000000" align="center">
+<td style=" padding: 15px;">
+Pandemic payrolls
+
+</td>
+</tr>
+</table>
+
+<br>
+<br>
+<br>
+
+<h3>
+3. China's pyrrhic victory
+</h3>
+<p>
+The world’s factory is re-opening, but the market is closed and the shoppers are gone.
+
+China’s social isolation policies appear to have contained the coronavirus at home, allowing work and travel to resume. But major economic damage may be yet to come. With infections climbing exponentially in the United States, Europe and the other markets China exports to, and with supply chains in disarray, China is getting neither the imported components it needs nor demand for its products.
+
+Already Chinese factories’ Jan-Feb profits have hit their lowest in a decade and upcoming manufacturing surveys will very likely reveal more pain. And just like everywhere else, job losses are mounting up, regardless of how many cheap loans are being offered to businesses. Expectations are now for the economy to contract this quarter but many economists reckon 2020 growth will be around 2% - a third of the “around 6%” authorities target.</p>
+<br>
+<br>
+
+<table align="center" height="500" width="650" border="2">
+<tr>
+<td>
+<img src="../resources/images/economy/3.jpg" height="500" width="650">
+</td>
+</tr>
+<tr bgcolor="#000000" align="center">
+<td style=" padding: 15px;">China's industrial profits are falling</td>
+</tr>
+</table>
+<br>
+<br>
+
+<br>
+<br>
 <table width="268" height="46" border="1" align="center" bgcolor="#b5a8a7">
       <tr>
     <td width="141" align="center"><a href="../index.html" >Home</a></td>
@@ -21,5 +121,6 @@
     </td>
   </tr>
 </table>
+
 </body>
 </html>
