--- a/pages/history.html
+++ b/pages/history.html
@@ -2,15 +2,87 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>History | COVID-19</title>
-<link rel="stylesheet" type="text/css" href="../css/pages.css">
+<link rel="stylesheet" type="text/css" href="../css/history.css">
 <link rel="apple-touch-icon" sizes="180x180" href="../resources/icons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="../resources/icons/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="../resources/icons/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
 </head>
 <body text="#FFFFFF" link="#FFFFFF" vlink="#FFFFFF" alink="#FFFFFF"><ima>
-<h1 align="center">&nbsp;</h1>
+
 <h1 align="center">History of coronavirus</h1>
+
+<p>
+In the last two decades, more aggressive coronaviruses have emerged that are capable of causing serious illness and even death in humans. These include SARS-CoV, MERS and now SARS-CoV-2.
+</p>
+<ul>
+<li>
+Coronaviruses are a large family of single-stranded RNA viruses that cause diseases in animals and humans.
+</li>
+<li>
+While there are hundreds of coronaviruses that cause diseases in animals such as pigs, camels, bats and cats, till date seven different types of coronaviruses have been identified that infect humans. 
+</li>
+</ul>
+<br>
+<br>
+<br>
+<table align="center" height="247" width="354" border="2">
+<tr>
+<td>
+<img src="../resources/images/history/chickens.jpg" height="247" width="354">
+</td>
+</tr>
+<tr bgcolor="#000000" align="center">
+<td style=" padding: 15px;">
+The first coronavirus discovered was in chickens
+</td>
+</tr>
+</table>
+
+<br>
+<br>
+
+<br>
+<br>
+
+<h3>
+When the human coronaviruses were first identified?
+</h2>
+<ul>
+	<li> 
+229E: One of the first coronaviruses strains to be described in the mid-60s, possibly by D Hamre and JJ Procknow in their 1966 paper titled, “A new virus isolated from the human respiratory tract”, published in Experimental Biology and Medicine.
+</li>
+	<li> 
+OC43: Discovered in 1967 according to the Journal of Virology. However, a paper in Virology Journal has described it as the first human coronavirus to be discovered in 1965, citing a 1966 paper written by Tyrrell and Bynoe who worked with the nasal swab titled B814.
+	</li>
+    
+    <li> 
+NL63 and HKU1: First identified in the Netherlands in 2004, probably after it was isolated from a seven-month-old infant showing respiratory symptoms. During this time, there was an increase in research on human coronaviruses, which led to the discovery of NL63 and HKU1 in Hong Kong in early 2005.
+	</li>
+    <li> 
+SARS-CoV: 2003 in China (animal source not yet known, bats thought to have given it to other animals, probably civet cats)
+	</li>
+    <li> 
+MERS: 2012 in Saudi Arabia (transmitted by dromedary camels)
+	</li>
+    <li> 
+SARS-CoV-2: 2019 in Wuhan (source not yet known, possibly bats)
+</li>
+</ul>
+<table align="center" height="247" width="400" border="2">
+<tr>
+<td width="388">
+<img src="../resources/images/history/em.jpg" height="247" width="400">
+</td>
+</tr>
+<tr bgcolor="#000000" align="center">
+<td style="    padding: 15px;">
+Electron Microscope Image of Coronavirus
+</td>
+</tr>
+</table>
+<br>
+<br>
 
 
 <table width="268" height="46" border="1" align="center" bgcolor="#b5a8a7">
