--- a/pages/india-stats.html
+++ b/pages/india-stats.html
@@ -2,17 +2,311 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>India-Stats | COVID-19</title>
-<link rel="stylesheet" type="text/css" href="../css/pages.css">
+<link rel="stylesheet" type="text/css" href="../css/stats.css">
 <link rel="apple-touch-icon" sizes="180x180" href="../resources/icons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="../resources/icons/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="../resources/icons/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
 </head>
 <body text="#FFFFFF" link="#FFFFFF" vlink="#FFFFFF" alink="#FFFFFF"><ima>
-<h1 align="center">&nbsp;</h1>
 <h1 align="center">India Stats</h1>
+<br>
+<table border="1" cellspacing="1" cellpadding="1" align="center" style="text-shadow: 2px 1px 1px #000;">
+<thead>
+	<tr bgcolor="#000000">
+	<th width="60"><strong>S. No.</strong></th>
+	<th width="321"><strong>Name of State / UT</strong></th>
+	<th width="237"><strong>Total Confirmed cases</strong></th>                              
+	<th width="274"><strong>Cured/Discharged/Migrated</strong></th>
+	<th width="128"><strong>Deaths</strong></th>
+	</tr>
+</thead>	
+<tbody>
+<tr>
+	<td>1</td>
+	<td>Andaman and Nicobar Islands</td>
+	<td>33</td>
+	<td>32</td>
+	<td>0</td>
+	</tr>
+	<tr>
+	
+	<td>2</td>
+	<td>Andhra Pradesh</td>
+	<td>1717</td>
+	<td>589</td>
+	<td>36</td>
+	</tr>
+	
+	
+	<tr>
+	<td>3</td>
+	<td>Arunachal Pradesh</td>
+	<td>1</td>
+	<td>1</td>
+	<td>0</td>
+	</tr>
+	
+	<tr>
+	<td>4</td>
+	<td>Assam</td>
+	<td>43</td>
+	<td>32</td>
+	<td>1</td>
+	</tr>
+	
+	<tr>
+	<td>5</td>
+	<td>Bihar</td>
+	<td>536</td>
+	<td>142</td>
+	<td>4</td>
+	</tr>
+	
+	<tr>
+	<td>6</td>
+	<td>Chandigarh</td>
+	<td>111</td>
+	<td>21</td>
+	<td>1</td>
+	</tr>
+	
+	<tr>
+	<td>7</td>
+	<td>Chhattisgarh</td>
+	<td>59</td>
+	<td>36</td>
+	<td>0</td>
+	</tr>
+	<tr>
+	<td>8</td>
+	<td>Dadar Nagar Haveli</td>
+	<td>1</td>
+	<td>0</td>
+	<td>0</td>
+	</tr>
+	
+	<tr>
+	<td>9</td>
+	<td>Delhi</td>
+	<td>5104</td>
+	<td>1468</td>
+	<td>64</td>
+	</tr>
+	
+	<tr>
+	<td>10</td>
+	<td>Goa</td>
+	<td>7</td>
+	<td>7</td>
+	<td>0</td>
+	</tr>
+	
+	<tr>
+	<td>11</td>
+	<td>Gujarat</td>
+	<td>6245</td>
+	<td>1381</td>
+	<td>368</td>
+	</tr>
+	
+	<tr>
+	<td>12</td>
+	<td>Haryana</td>
+	<td>548</td>
+	<td>256</td>
+	<td>6</td>
+	</tr>
+	
+	<tr>
+	<td>13</td>
+	<td>Himachal Pradesh</td>
+	<td>42</td>
+	<td>38</td>
+	<td>2</td>
+	</tr>
+	
+	<tr>
+	<td>14</td>
+	<td>Jammu and Kashmir</td>
+	<td>741</td>
+	<td>320</td>
+	<td>8</td>
+	</tr>
+	<tr>
+	<td>15</td>
+	<td>Jharkhand</td>
+	<td>125</td>
+	<td>33</td>
+	<td>3</td>
+	</tr>
+	
+	<tr>
+	<td>16</td>
+	<td>Karnataka</td>
+	<td>671</td>
+	<td>331</td>
+	<td>29</td>
+	</tr>
+	
+	<tr>
+	<td>17</td>
+	<td>Kerala</td>
+	<td>502</td>
+	<td>462</td>
+	<td>4</td>
+	</tr>
+	
+	<tr>
+	<td>18</td>
+	<td>Ladakh</td>
+	<td>41</td>
+	<td>17</td>
+	<td>0</td>
+	</tr>
 
-<table width="268" height="46" border="1" align="center" bgcolor="#b5a8a7">
+	<tr>
+	<td>19</td>
+	<td>Madhya Pradesh</td>
+	<td>3049</td>
+	<td>1000</td>
+	<td>176</td>
+	</tr>
+	
+	<tr>
+	<td>20</td>
+	<td>Maharashtra</td>
+	<td>15525</td>
+	<td>2819</td>
+	<td>617</td>
+	</tr>
+	
+	<tr>
+	<td>21</td>
+	<td>Manipur</td>
+	<td>2</td>
+	<td>2</td>
+	<td>0</td>
+	</tr>
+	<tr>
+	<td>22</td>
+	<td>Meghalaya</td>
+	<td>12</td>
+	<td>10</td>
+	<td>1</td>
+	</tr>
+	
+	<tr>
+	<td>23</td>
+	<td>Mizoram</td>
+	<td>1</td>
+	<td>0</td>
+	<td>0</td>
+	</tr>
+
+	<tr>
+	<td>24</td>
+	<td>Odisha</td>
+	<td>175</td>
+	<td>60</td>
+	<td>1</td>
+	</tr>
+
+	<tr>
+	<td>25</td>
+	<td>Puducherry</td>
+	<td>9</td>
+	<td>6</td>
+	<td>0</td>
+	</tr>
+
+	<tr>
+	<td>26</td>
+	<td>Punjab</td>
+	<td>1451</td>
+	<td>133</td>
+	<td>25</td>
+	</tr>
+	
+	<tr>
+	<td>27</td>
+	<td>Rajasthan</td>
+	<td>3158</td>
+	<td>1525</td>
+	<td>89</td>
+	</tr>
+
+	<tr>
+	<td>28</td>
+	<td>Tamil Nadu</td>
+	<td>4058</td>
+	<td>1485</td>
+	<td>33</td>
+	</tr>
+	
+	<tr>
+	<td>29</td>
+	<td>Telengana</td>
+	<td>1096</td>
+	<td>585</td>
+	<td>29</td>
+	</tr>
+	
+	<tr>
+	<td>30</td>
+	<td>Tripura</td>
+	<td>43</td>
+	<td>2</td>
+	<td>0</td>
+	</tr>
+	
+	
+	
+	<tr>
+	<td>31</td>
+	<td>Uttarakhand</td>
+	<td>61</td>
+	<td>39</td>
+	<td>1</td>
+	</tr>
+	
+	<tr>
+	<td>32</td>
+	<td>Uttar Pradesh</td>
+	<td>2880</td>
+	<td>987</td>
+	<td>56</td>
+	</tr>                    
+	
+	<tr>
+	<td>33</td>
+	<td>West Bengal</td>
+	<td>1344</td>
+	<td>364</td>
+	<td>140</td>
+	</tr>
+	
+	<tr bgcolor="#999999">
+	<td colspan="2"><strong><span>Total number of confirmed cases in India</span></strong></td>
+	<td align="right" style="text-align:right;"><strong>49391</strong></td>
+	<td  style="text-align:right;">
+	<strong>14183</strong>
+	</td>
+	<td  style="text-align:right;">
+	<strong>1694</strong>
+	</td>
+	</tr>
+	
+	<tr bgcolor="#000000">
+	<td align="center" style="text-align:center;" colspan="5">Data as of 6th May 2020 3:00 PM</td>
+	</tr>
+
+	
+</tbody>
+</table>
+<br>
+<br>
+<table width="268" height="46" border="1" align="center" bgcolor="#000000">
       <tr>
     <td width="141" align="center"><a href="../index.html" >Home</a></td>
     <td width="141" align="center"><a href="links.html" >Index</a>
