--- a/pages/precautions.html
+++ b/pages/precautions.html
@@ -10,10 +10,53 @@
 </head>
 <body text="#FFFFFF" link="#FFFFFF" vlink="#FFFFFF" alink="#FFFFFF">
   <ima>
-<h1 align="center">&nbsp;</h1>
 <h1 align="center">Precautions</h1>
+<br>
+  <br>
+  <br>
+  <p>Protect yourself and others around you by knowing the facts and taking appropriate precautions. Follow advice provided by your local public health agency.
+  To prevent the spread of COVID-19:
+</p>
+<br>
+<br>
+<ul>
+<li>Clean your hands often. </li>
+<li>Use soap and water, or an alcohol-based hand rub.
+</li>
+<li>Maintain a safe distance from anyone who is coughing or sneezing.  </li>
+<li>Don’t touch your eyes, nose or mouth.
+</li>
+<li>Cover your nose and mouth with your bent elbow or a tissue when you cough or sneeze.</li>
+<li> Stay home if you feel unwell.</li>
+<li> If you have a fever, a cough, and difficulty breathing, seek medical attention. </li>
+<li>Call in advance. Follow the directions of your local health authority.</li>
+</ul>
 
-
+<br>
+<br>
+<p> Avoiding unneeded visits to medical facilities allows healthcare systems to operate more effectively, therefore protecting you and others.
+</p>
+ <br>
+ <br>
+ <br>
+ <br>
+  <table width="600" border="6" align="center">
+    <tr>
+      <td width="600"><img src="../resources/images/precautions/2.jpg" width="600"></td>
+    </tr>
+    </table>
+    <br>
+    <br>
+      <table width="600" border="6" align="center">
+    <tr>
+      <td width="600"><img src="../resources/images/precautions/1.jpg"  width="600"></td>
+    </tr>
+  </table>
+  <br>
+  <br>
+  <br>
+  <br>
+  
 <table width="268" height="46" border="1" align="center" bgcolor="#b5a8a7">
       <tr>
     <td width="141" align="center"><a href="../index.html" >Home</a></td>
