--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -10,7 +10,7 @@
 </head>
 <body text="#FFFFFF" link="#FFFFFF" vlink="#FFFFFF" alink="#FFFFFF">
 <h1 align="center">Gallery</h1>
-<table width="1000" border="6" align="center" cellpadding="10" >
+<table width="1000" border="6" align="center" >
   <tr>
     <td width="450" height="264"><img src="../resources/images/gallery/1.jpg" width="450" height="264"></td>
     <td width="450"><img src="../resources/images/gallery/3.jpg" width="450" height="264"></td>
