--- a/pages/situation-india.html
+++ b/pages/situation-india.html
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Situation in India | COVID-19</title>
-<link rel="stylesheet" type="text/css" href="../css/pages.css">
+<link rel="stylesheet" type="text/css" href="../css/india-situation.css">
 <link rel="apple-touch-icon" sizes="180x180" href="../resources/icons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="../resources/icons/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="../resources/icons/favicon-16x16.png">
@@ -13,6 +13,50 @@
 <h1 align="center">&nbsp;</h1>
 <h1 align="center">Situation in India</h1>
 
+<div class="wrapper">
+	<article>
+		
+		<div >
+	<img src="../resources/images/u1.jpg" >
+	<img src="../resources/images/u2.jpg">
+	<img src="../resources/images/u3.jpg">
+
+</div>
+		<h3 align="left">HIGHLIGHTS</h3>
+• After a comprehensive review, and in view of the Lockdown measures
+having led to significant gains in the COVID-19 situation in the country,
+Ministry of Home Affairs (MHA), Government of India (GoI) issued an
+Order under the Disaster Management Act, 2005 to further extend the
+Lockdown for a further period of 2 weeks with effect from May 4.<br><br>
+• Union Ministry of Home Affairs (MHA) has issued an order to allow the
+movement of migrant workers, pilgrims, tourists, students and other
+persons, stranded at different places across the country, by special trains
+to be operated by Ministry of Railways (MoR).<br><br>
+• WHO Field staff is supporting the States/UTs through the MoHFW to
+demarcate containment zones, implementing perimeter control, active
+search for cases through the house to house surveillance by special
+teams formed for the purpose, testing of all cases as per sampling
+guidelines, contact tracing and clinical management of all confirmed
+cases.<br><br><br>
+
+	
+
+<ul><h2>India's current Situation</h2>
+    <li>India has recorded 46,711 confirmed cases, 1,583 deaths, 13,161 cured cases, according to the latest update released by the Union Ministry for Health and Family Welfare on Tuesday evening.</li><br><br>
+
+<li>India has sent three ships to evacuate citizens from Maldives and UAE.</li><br><br>
+
+
+<li>PM Modi chaired a meeting of the task force on development of a vaccine against coronavirus COVID-19.</li><br><br>
+
+<li>The lockdown in India has been extended till May 17. Telangana extends lockdown until 29 May.</li><br><br>
+
+<li>Liquor shops not allowed to open from tomorrow in Mumbai. Non-essential outlets in Mumbai to remain shut.</li><br><br>
+
+<li>Over 300,000 people in Gulf registered for evacuation.</li>
+</ul>
+	</article>
+</div>
 <table width="268" height="46" border="1" align="center" bgcolor="#b5a8a7">
     <tr>
     <td width="141" align="center"><a href="../index.html" >Home</a></td>
