--- a/pages/self-awareness.html
+++ b/pages/self-awareness.html
@@ -4,15 +4,97 @@
 <title>Self awareness | COVID-19</title>
 <link rel="stylesheet" type="text/css" href="../css/pages.css">
 <link rel="apple-touch-icon" sizes="180x180" href="../resources/icons/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="../resources/icons/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="../resources/icons/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="../resources/icons/favicon-32x32png">
+<link rel="icon" type="image/png" sizes="16x16" href="../resources/icons/favicon-16x16png">
 <link rel="manifest" href="/site.webmanifest">
 </head>
 <body text="#FFFFFF" link="#FFFFFF" vlink="#FFFFFF" alink="#FFFFFF">
   <ima>
-<h1 align="center">&nbsp;</h1>
+<br>
 <h1 align="center">Self awareness of people in society</h1>
-
+<br>
+<br>
+<br>
+<br>
+<h3>
+The following things, when done by people in a society reflects the self awareness of people in society.
+</h3>
+<br>
+<br>
+<ol>
+<li> COVID-19 has and is likely to affect people from many countries, in many geographical locations.
+When referring to people with COVID-19, do not attach the disease to any particular ethnicity or
+nationality. Be empathetic to all those who are affected, in and from any country. People who are
+affected by COVID-19 have not done anything wrong, and they deserve our support, compassion
+and kindness.
+</li><br><li> Do not refer to people with the disease as “COVID-19 cases”, “victims” “COVID-19 families” or
+“the diseased”. They are “people who have COVID-19”, “people who are being treated for
+COVID-19”, or “people who are recovering from COVID-19”, and after recovering from COVID-19
+their life will go on with their jobs, families and loved ones. It is important to separate a person
+from having an identity defined by COVID-19, in order to reduce stigma.
+</li>
+<br>
+<br>
+<br>
+<table align="center" height="247" width="393" border="2">
+<tr>
+<td width="393	">
+<img src="../resources/images/society/1.jpg" height="247" width="393">
+</td>
+</tr>
+</tr>
+<tr bgcolor="#000000" align="center">
+<td style=" padding: 15px;">
+Aware mother means less risk to the child
+</td>
+</tr>
+</table>
+<br>
+<br>
+<br>
+<br>
+<li> Minimize watching, reading or listening to news about COVID-19 that causes you to feel anxious
+  or distressed; seek information only from trusted sources and mainly so that you can take practical
+  steps to prepare your plans and protect yourself and loved ones. Seek information updates at
+  specific times during the day, once or twice. The sudden and near-constant stream of news reports
+  about an outbreak can cause anyone to feel worried. Get the facts; not rumours and
+  misinformation. Gather information at regular intervals from the WHO website and local health
+  authority platforms in order to help you distinguish facts from rumours. Facts can help to minimize
+  fears. 
+</li><br><li> Protect yourself and be supportive to others. Assisting others in their time of need can benefit
+both the person receiving support and the helper. For example, check by telephone on neighbours
+or people in your community who may need some extra assistance. Working together as one
+community can help to create solidarity in addressing COVID-19 together.
+</li><br><li> Find opportunities to amplify positive and hopeful stories and positive images of local people who
+have experienced COVID-19. For example, stories of people who have recovered or who have supported
+a loved one and are willing to share their experience.
+</li><br><li> Honour carers and healthcare workers supporting people affected with COVID-19 in your
+community. Acknowledge the role they play in saving lives and keeping your loved ones safe. 
+</li>
+</ol>
+<br>
+<br>
+<table align="center" height="247" width="393" border="2">
+<tr>
+<td width="393	">
+<img src="../resources/images/society/2.jpg" height="247" width="535">
+</td>
+</tr>
+</tr>
+<tr bgcolor="#000000" align="center">
+<td style=" padding: 15px;">
+Spreading awareness is the need of the hour
+</td>
+</tr>
+</table>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <table width="268" height="46" border="1" align="center" bgcolor="#b5a8a7">
     <tr>
     <td width="141" align="center"><a href="../index.html" >Home</a></td>
