--- a/pages/effect-poor.html
+++ b/pages/effect-poor.html
@@ -10,16 +10,117 @@
 </head>
 <body text="#FFFFFF" link="#FFFFFF" vlink="#FFFFFF" alink="#FFFFFF">
 <ima>
-
 <h1 align="center">Effect on poor families and help by society</h1>
-
-
-<table width="268" height="46" border="1" align="center" bgcolor="#b5a8a7">
-      <tr>
-    <td width="141" align="center"><a href="../index.html" >Home</a></td>
-    <td width="141" align="center"><a href="links.html" >Index</a>
-    </td>
-  </tr>
+<p>
+<br>
+<ul>
+  The measures taken to contain COVID-19 will affect households in many ways, including job loss, loss of remittances, higher prices, rationing of food and other basic goods, and disruptions to health care services and education.
+  While the impacts will be felt by most households almost immediately, they will likely be deeper and longer-lasting among the poor, who are more vulnerable for several reasons:
+</p>
+<li>
+<h3>Where they live</h3>
+<p>The poor live primarily in rural areas. While this could minimize their exposure to the disease, it also means they have limited access to health services. Moreover, since rural households tend to depend more on domestic remittances from urban migrants, economic shutdowns in urban areas will hurt them too. The poor in urban areas, on the other hand, live in congested settlements with low-quality services, which would significantly increase their risk of being infected by the contagion. Disruptions in food markets could be more severe in urban areas.
+</p>
+<li>
+<h3>Where they work</h3>
+<p> The poor work largely in the agriculture and service sectors and are usually self-employed or informally employed, mainly in micro and family enterprises. Those employed in the informal service sector in urban areas are likely to bear the most severe initial impacts. In addition, many of the vulnerable non-poor, who are increasingly employed in the gig economy, particularly in middle-income countries, will also be at risk of slipping into poverty. Those engaged in agriculture may be able to cope, at least initially, with potential disruptions to food supplies or price spikes, but are likely to be affected by a decline in demand in urban areas over time.
+</p>
+<br>
+<br>
+<table align="center" height="247" width="400" border="2">
+<tr>
+<td width="388">
+<img src="../resources/images/poor/4.jpg" height="247" width="400">
+</td>
+</tr>
+<tr bgcolor="#000000" align="center">
+<td style="    padding: 15px;"> Poor woman selling vegetables during the pandemic
+</td>
+</tr>
 </table>
+<br>
+<br>
+<li>
+<h3>High dependence on public services, particularly health and education</h3>
+<p> In the immediate term, limited access to high-quality and affordable health services can have devastating impacts in the event of an illness in the family, while school closures can lead to a decline in food intake among children of poor families who rely on school feeding programs. In the long term, the impacts of lost months of schooling, early childhood interventions, health check-ups, and nutrition can be particularly high for children in poor families, adversely affecting their human capital development and earning potential.
+</p>
+<br>
+<br>
+<table align="center" height="247" width="400" border="2">
+<tr>
+<td width="388">
+<img src="../resources/images/poor/3.jpg" height="247" width="400">
+</td>
+</tr>
+<tr bgcolor="#000000" align="center">
+<td style="    padding: 15px;">Servants feeding the poor</td>
+</tr>
+</table>
+<br>
+<br>
+<li>
+<h3>Limited savings and lack of access to insurance</h3>
+<p>This, in the absence of adequate safety nets, can force the poor to rely on coping strategies with potential long-lasting negative effects, such as the sale of productive assets or diminished investments in human capital. </p>
+<br>
+  <br>
+  <br>
+<br>
+<table align="center" height="247" width="400" border="2">
+<tr>
+<td width="388">
+<img src="../resources/images/poor/1.jpg" height="247" width="400">
+</td>
+</tr>
+<tr bgcolor="#000000" align="center">
+<td style="    padding: 15px;"> Slum are the most vulnerable during a pandemic</td>
+</tr>
+</table>
+<br>
+<br>
+  <br>
+  <br>
+  Policies needed to mitigate poverty and distributional impacts will have to respond to each country’s context and circumstances. Having said that, the numbers above suggest that across affected countries:
+<br>
+<br>
+<li>
+<h3>
+Any support package will need to quickly reach both the existing and new poor. 
+</h3>
+While existing safety net programs can be mobilized to get cash into the pockets of some of the existing poor relatively quickly, this is not the case for the new poor. In fact, the new poor are likely to look different from the existing poor, particularly in their location (mostly urban) and employment (mostly informal services, construction, and manufacturing).
+<br>
+Thus a society must help poor get their entitlement.
+<br>
+<br>
+<li>
+  <h3>
+    Decision-makers need timely and policy-relevant information on impacts and the effectiveness of policy responses.
+  </h3>
+  This can be done using existing, publicly available data to monitor the unfolding economic and social impacts of the crisis, including prices, service delivery, and economic activity, as well as social sentiment and behaviors. In addition, governments can use mobile technology to safely gather information from a representative sample of households or individuals. Phone surveys can collect information on health and employment status, food security, coping strategies, access to basic services and safety nets and other outcomes closely related to the risk of falling (further) into poverty.
+  <br>
+  <br>
+  <table align="center" height="247" width="400" border="2">
+  <tr>
+  <td width="388">
+  <img src="../resources/images/poor/2.jpg" height="247" width="400">
+  </td>
+  </tr>
+  <tr bgcolor="#000000" align="center">
+  <td style="    padding: 15px;"> Family going back to their village</td>
+  </tr>
+  </table>
+  <br>
+  <br>
+  <br>
+  <h3 align="center">Thus a society must help poor get their entitlement</h3>
+  <br>
+  <br>
+  <br>
+  <table width="268" height="46" border="1" align="center" bgcolor="#b5a8a7">
+    <tr>
+      <td width="141" align="center"><a href="../index.html" >Home</a></td>
+      <td width="141" align="center"><a href="links.html" >Index</a>
+      </td>
+    </tr>
+  </table>
 </body>
 </html>
