--- a/pages/medical-solutions.html
+++ b/pages/medical-solutions.html
@@ -2,6 +2,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Medical Solutions | COVID-19</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="../css/medical.css">
 <link rel="apple-touch-icon" sizes="180x180" href="../resources/icons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="../resources/icons/favicon-32x32.png">
@@ -34,6 +35,10 @@ On March 24th, the FDA began allowing convalescent plasma to be used in patients
 In order to donate plasma, a person must meet several criteria. They have to have tested positive for COVID-19, recovered, have no symptoms for 14 days, currently test negative for COVID-19, and have high enough antibody levels in their plasma. A donor and patient must also have compatible blood types. Once plasma is donated, it is screened for other infectious diseases, such as HIV.<br>
 
 Each donor produces enough plasma to treat one to three patients. Donating plasma should not weaken the donor's immune system nor make the donor more susceptible to getting reinfected with the virus.<br><br>
+<div class="box-image">
+<img src="../resources/images/m11.png">
+<img src="../resources/images/m12.jpg"></div>
+<br><br>
 
 <h3>Is there an antiviral treatment for COVID-19?</h3><br><br>
 Currently there is no specific antiviral treatment for COVID-19.
