--- a/pages/social-distancing.html
+++ b/pages/social-distancing.html
@@ -2,7 +2,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Social Distancing | COVID-19</title>
-<link rel="stylesheet" type="text/css" href="../css/pages.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" href="../css/social-distancing.css">
 <link rel="apple-touch-icon" sizes="180x180" href="../resources/icons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="../resources/icons/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="../resources/icons/favicon-16x16.png">
@@ -13,7 +14,32 @@
 <h1 align="center">&nbsp;</h1>
 <h1 align="center">Social Distancing</h1>
 
+<div>
+	<h2 align="center">
+	    Keep Your Distance to slow the spread
+	</h2><br><br>
+	<h2>
+		What is social distancing?
+	</h2><br><br>
+	<img src="../resources/images/s1.png"><br>
+	<p>
+		Social distancing, also called “physical distancing,” means keeping space between yourself and other people outside of your home. To practice social or physical distancing:
+<ul>
+<li>Stay at least 6 feet (about 2 arms’ length) from other people.</li>
+<li>Do not gather in groups</li>
+<li>Stay out of crowded places and avoid mass gatherings.</li></ul><br><br>
+In addition to everyday steps to prevent COVID-19, keeping space between you and others is one of the best tools we have to avoid being exposed to this virus and slowing its spread locally and across the country and world.<br><br>
 
+Limit close contact with others outside your household in indoor and outdoor spaces. Since people can spread the virus before they know they are sick, it is important to stay away from others when possible, even if you—or they—have no symptoms. Social distancing is especially important for people who are at higher risk for severe illness from COVID-19.<br><br>
+ 
+<h2>Why practice social distancing?</h2><br><br>
+COVID-19 spreads mainly among people who are in close contact (within about 6 feet) for a prolonged period. Spread happens when an infected person coughs, sneezes, or talks, and droplets from their mouth or nose are launched into the air and land in the mouths or noses of people nearby. The droplets can also be inhaled into the lungs. Recent studies indicate that people who are infected but do not have symptoms likely also play a role in the spread of COVID-19.<br><br>
+
+It may be possible that a person can get COVID-19 by touching a surface or object that has the virus on it and then touching their own mouth, nose, or eyes. However, this is not thought to be the main way the virus spreads. COVID-19 can live for hours or days on a surface, depending on factors such as sunlight, humidity, and the type of surface. Social distancing helps limit opportunities to come in contact with contaminated surfaces and infected people outside the home.<br>
+
+	</p>
+
+</div>
 <table width="268" height="46" border="1" align="center" bgcolor="#b5a8a7">
     <tr>
     <td width="141" align="center"><a href="../index.html" >Home</a></td>
