--- a/pages/medical-solutions.html
+++ b/pages/medical-solutions.html
@@ -18,7 +18,7 @@
 <div class="wrapper">
 	<h2>Treatments for Covid-19</h2>
 	<h4>What helps ,what doesn't ,and what's in the pipeline</h4>
-	<img src="../resources/images/m1.jpg" align="center">
+	<img src="../resources/images/medical-solutions/m1.jpg" align="center">
 	<p>	Most people who become ill with COVID-19 will be able to recover at home. No specific treatments for COVID-19 exist right now. But some of the same things you do to feel better if you have the flu — getting enough rest, staying well hydrated, and taking medications to relieve fever and aches and pains — also help with COVID-19.<br>
 
 In the meantime, scientists are working hard to develop effective treatments. Therapies that are under investigation include drugs that have been used to treat malaria and autoimmune diseases; antiviral drugs that were developed for other viruses, and antibodies from people who have recovered from COVID-19.<br><br>
@@ -36,8 +36,8 @@ In order to donate plasma, a person must meet several criteria. They have to hav
 
 Each donor produces enough plasma to treat one to three patients. Donating plasma should not weaken the donor's immune system nor make the donor more susceptible to getting reinfected with the virus.<br><br>
 <div class="box-image">
-<img src="../resources/images/m11.png">
-<img src="../resources/images/m12.jpg"></div>
+
+<img src="../resources/images/medical-solutions/m12.jpg"></div>
 <br><br>
 
 <h3>Is there an antiviral treatment for COVID-19?</h3><br><br>
