effect-lockdown.html done

--- a/pages/medical-solutions.html
+++ b/pages/medical-solutions.html
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Medical Solutions | COVID-19</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <link rel="stylesheet" type="text/css" href="../css/medical.css">
 <link rel="apple-touch-icon" sizes="180x180" href="../resources/icons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="../resources/icons/favicon-32x32.png">
@@ -18,7 +18,7 @@
 <div class="wrapper">
 	<h2>Treatments for Covid-19</h2>
 	<h4>What helps ,what doesn't ,and what's in the pipeline</h4>
-	<img src="../resources/images/medical-solutions/m1.jpg" align="center">
+	<img id="no1" src="../resources/images/medical-solutions/m1.jpg" align="center">
 	<p>	Most people who become ill with COVID-19 will be able to recover at home. No specific treatments for COVID-19 exist right now. But some of the same things you do to feel better if you have the flu — getting enough rest, staying well hydrated, and taking medications to relieve fever and aches and pains — also help with COVID-19.<br>
 
 In the meantime, scientists are working hard to develop effective treatments. Therapies that are under investigation include drugs that have been used to treat malaria and autoimmune diseases; antiviral drugs that were developed for other viruses, and antibodies from people who have recovered from COVID-19.<br><br>
